Second_Study/src/main/java/com/example/global/error/ErrorResponse/BindErrorException.java
package com.example.global.error.ErrorResponse;public class BindErrorException {
}
